compiler/actonc/test/typeerrors/ex4.act
def f(x,y):
    return x+y

actor main(env):
    print("a".center(f(3)))
    
