compiler/actonc/test/typeerrors/ex4.golden
Building file test/typeerrors/ex4.act
  Compiling ex4.act for development

ERROR: Error when compiling ex4 module: Type error

  |
1 |def f(x,y):
  |    ^


  |
5 |    print("a".center(f(3)))
  |                     ^^^^
Type incompatibility between definition of and call of f (keyword argument(s) 'y' is not defined in call)

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

